tests/samples/valid/builtin_file_and_line.pn

fn main() -> u8
{
	print!("Hello from ", file!(), ":", line!(), "!\n");
	return: 0
}
