tests/samples/invalid/binary_integer_too_big.pn
fn main() -> u128
{
	return:
	0b110100111010111101110111110001100010100110011000101010110010101100;
}
